solved some alignment issues

--- a/youTube.css
+++ b/youTube.css
@@ -113,6 +113,7 @@ p{
     right: 0;
     border-bottom: 1px solid rgb(222, 221, 221);
     z-index: 100;
+    padding: 0px 8.5px;
 }
 .left-section{
     display: flex;
